[package]
name = "axp2101"
authors = ["HuangYunXuan <hyx0329@outlook.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
bit_field = "0.10.2"
defmt = { version = "0.3.8", optional = true }
embedded-hal = "1.0.0"
num_enum = { version = "0.7.2", default-features = false }

[dev-dependencies]
paste = "1.0.15"

[features]
defmt = ["dep:defmt", "embedded-hal/defmt-03"]
std = ["num_enum/std"]
