[package]
name = "axp2101"
description = "AXP2101 driver for embedded-hal 1.0"
authors = ["HuangYunXuan <hyx0329@outlook.com>"]
keywords = ["embedded-hal-driver", "axp", "pmu"]
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
readme = "README.md"
license = "MIT"

[dependencies]
bit_field = "0.10.2"
defmt = { version = "0.3.8", optional = true }
embedded-hal = "1.0.0"
num_enum = { version = "0.7.2", default-features = false }

[dev-dependencies]
paste = "1.0.15"

[features]
defmt = ["dep:defmt", "embedded-hal/defmt-03"]
std = ["num_enum/std"]
